# quiz-generator

./: LICENSE  README.md  cards.json  default_question.txt  markdown_quiz.ipynb  pyproject.toml  quiz-app.py  requirements.txt  sample.md
.ipynb_checkpoints/: markdown_quiz-checkpoint.ipynb  md-app-checkpoint.py
temp_quizzes/: temp_quiz.json  test.json
