[tool.poetry]
name = "quiz-generator"
version = "0.1.0"
description = "This a Streamlit App designed to make creating quizzes in JupyterBook a bit easier."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.9.0"
jupyterquiz = "^1.8"
jupytercards = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
